--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,8 @@
   align-items: center;
   align-content: center;
   margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
   width: 90%;
   padding: 10px;
 }
