--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,54 @@
 * {
-  font-family: sans-serif;
+  border-style: none;
+  font-size: 17px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   align-items: center;
   align-content: center;
   margin: auto;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  width: 95%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 90%;
   padding: 5px;
 }
+
 h1 {
+  font-size: 30px;
   text-align: center;
+  color: dodgerblue;
+}
+
+.main {
+  background-color: #81D4FA;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2), 0 5px 15px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
+  border-radius: 15px;
+}
+
+input, button {
+  border-radius: 5px;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2), 0 5px 15px 0 rgba(0, 0, 0, 0.2);}
+
+.filteredList {
+  text-align: left;
+}
+
+button {
+transition-duration: 0s;
+}
+
+button:hover {
+  background-color: lightgray;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.prescription {
+  color: blue;
+}
+
+.allergy {
+  color: red;
+}
+
+.prescription, .allergy {
+  font-weight: 900;
 }
